[tool.poetry]
name = "funcparserlib"
version = "1.0.1"
description = "Recursive descent parsing library based on functional combinators"
authors = ["Andrey Vlasovskikh <andrey.vlasovskikh@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://funcparserlib.pirx.ru"
repository = "https://github.com/vlasovskikh/funcparserlib"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.7"

[tool.poetry.dev-dependencies]
six = "^1.15.0"
typing = {version = "^3.7.4", python = "~2.7"}
pre-commit = {version = "^2.11.1", python = "^3.7"}
tox = {version = "^3.23.0", python = "^3.7"}
mkdocs = {version = "^1.4.2", python = "^3.7"}
mkdocs-material = {version = "^8.5.8", python = "^3.7"}
mkdocstrings = {extras = ["python-legacy"], version = "^0.19.0", python = "^3.7"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
